# MUI

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  MUI_testing.cpp  README.md  bin.h  changelog  chrono_sampler_exact.h  chrono_sampler_gauss.h  chrono_sampler_mean.h  chrono_sampler_null.h  chrono_sampler_sum.h  comm.h  comm_factory.h  comm_mpi.h  comm_mpi_nxn.h  comm_mpi_smart.h  comm_tcp.h  config.h  dim.h  dynstorage.h  endian_traits.h  exception.h  geometry.h  lib_dispatcher.h  lib_factory.h  lib_mpi_helper.h  lib_mpi_hepler.h  lib_mpi_multidomain.h  lib_mpi_split.h  lib_singleton.h  lib_uri.h  main.cpp  message.h  mui-config.cmake  mui.h  mui.h.orig  point.h  reader.h  (+27 more)
.github/workflows/: pylint.backup  pylint.yml
CMake/: MUIConfig.cmake.in  sourcelist.cmake
Debug/: makefile  sources.mk
Documentation/html/: annotated.html  bin_8h.html  bin_8h__dep__incl.md5  bin_8h_source.html  chrono__sampler__exact_8h.html  chrono__sampler__exact_8h__dep__incl.map  chrono__sampler__exact_8h__dep__incl.md5  chrono__sampler__exact_8h__incl.md5  chrono__sampler__gauss_8h.html  chrono__sampler__gauss_8h__dep__incl.md5  chrono__sampler__gauss_8h_source.html  chrono__sampler__mean_8h.html  chrono__sampler__mean_8h__dep__incl.map  chrono__sampler__mean_8h__dep__incl.md5  chrono__sampler__mean_8h__incl.map  chrono__sampler__null_8h.html  chrono__sampler__sum_8h__dep__incl.map  chrono__sampler__sum_8h__dep__incl.md5  chrono__sampler__sum_8h_source.html  classmui_1_1chrono__sampler__mean-members.html  classmui_1_1chrono__sampler__mean.html  classmui_1_1chrono__sampler__null-members.html  classmui_1_1chrono__sampler__sum.html  classmui_1_1chrono__sampler__sum.js  classmui_1_1comm__fd-members.html  classmui_1_1comm__mpi__coll__graph.md5  classmui_1_1comm__mpi__smart-members.html  classmui_1_1communicator-members.html  classmui_1_1communicator.html  classmui_1_1communicator__inherit__graph.md5  classmui_1_1container__stream.js  classmui_1_1geometry_1_1any__shape-members.html  classmui_1_1geometry_1_1any__shape.html  classmui_1_1geometry_1_1box-members.html  classmui_1_1geometry_1_1or__set__inherit__graph.md5  classmui_1_1geometry_1_1point.js  classmui_1_1geometry_1_1point__inherit__graph.md5  classmui_1_1geometry_1_1shape.html  classmui_1_1geometry_1_1sphere-members.html  classmui_1_1geometry_1_1sphere.html  (+320 more)
Documentation/latex/: annotated.tex  bin_8h.tex  chrono__sampler__gauss_8h__dep__incl.md5  chrono__sampler__gauss_8h__incl.md5  chrono__sampler__mean_8h.tex  chrono__sampler__null_8h__incl.md5  chrono__sampler__sum_8h.tex  classmui_1_1comm__fd.tex  classmui_1_1comm__mpi__smart__coll__graph.md5  classmui_1_1geometry_1_1shape.tex  classmui_1_1geometry_1_1sphere__coll__graph.md5  classmui_1_1istream__inherit__graph.md5  classmui_1_1mpicomm__nxn.tex  classmui_1_1ocount__stream__coll__graph.md5  classmui_1_1sampler__moving__average.tex  classmui_1_1span.tex  classmui_1_1spatial__storage.tex  comm__factory_8h.tex  comm__mpi__nxn_8h.tex  comm__mpi__smart_8h__incl.md5  config_8h.tex  config_8h__dep__incl.md5  config_8h__incl.md5  dynstorage_8h__dep__incl.md5  files.tex  geometry_8h.tex  geometry_8h__dep__incl.md5  geometry_8h__incl.md5  hierarchy.tex  lib__dispatcher_8h.tex  lib__dispatcher_8h__incl.md5  lib__mpi__helper_8h.tex  lib__mpi__multidomain_8h__dep__incl.md5  lib__mpi__split_8h.tex  lib__mpi__split_8h__dep__incl.md5  lib__singleton_8h__dep__incl.md5  lib__uri_8h.tex  lib__uri_8h__dep__incl.md5  lib__uri_8h__incl.md5  message_8h__dep__incl.md5  (+45 more)
chrono_samplers/: chrono_sampler_exact.h  chrono_sampler_gauss.h  chrono_sampler_mean.h  chrono_sampler_null.h  chrono_sampler_sum.h
cmake/: MUIConfig.cmake.in  sourcelist.cmake
communication/: comm_mpi.h  comm_mpi_smart.h
coupling_algorithms/: algo_aitken.h  algo_fixedRelaxation (copy).h  algo_fixedRelaxation.h  algo_fixed_relaxation.h  algo_null.h  algor_null.h
doc/: Doxyfile
documentation/html/: ____init_____8py.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bin_8h.html  bin_8h.js  bin_8h__dep__incl.map  bin_8h__dep__incl.md5  bin_8h__incl.map  bin_8h__incl.md5  bin_8h_source.html  chrono__sampler__exact_8h.html  chrono__sampler__exact_8h__dep__incl.map  chrono__sampler__exact_8h__dep__incl.md5  chrono__sampler__exact_8h__incl.map  chrono__sampler__exact_8h_source.html  chrono__sampler__gauss_8h.html  (+1098 more)
linalg/: README.md  conjugate_gradient.h  ic_preconditioner.h  ilu_preconditioner.h  matrix.h  matrix_arithmetic.h  matrix_ctor_dtor.h  matrix_io_info.h  matrix_manipulation.h  matrix_util.h  preconditioner.h  preconditioner_base.h  preconditioner_ic.h  preconditioner_ilu.h  preconditioner_ssor.h  solver.h  solver_cg.h  solver_ge.h  ssor_preconditioner.h
spatial_samplers/: sampler_exact.h  sampler_gauss.h  sampler_mov_avg.h  sampler_nn.h  sampler_null.h  sampler_pseudo_n2_linear.h  sampler_pseudo_nn.h  sampler_rbf.h  sampler_shepard_quintic.h  sampler_sph_quintic.h  sampler_sum_quintic.h
src/: config.h  mui.h  mui.h.orig  mui_config.h  uniface.h
temporal_samplers/: temporal_sampler_exact.h  temporal_sampler_gauss.h  temporal_sampler_mean.h  temporal_sampler_null.h  temporal_sampler_sum.h
test/: Makefile  conjugate_gradient.cpp  main_linalg.cpp  matrix.cpp  solver.cpp
tests/: CMakeLists.txt  dummy.cpp
wrapper_c/: Makefile  mui_3d.cpp  mui_3d.h  unit_test.c
wrapper_f/: Makefile  TODO  mui.F90  mui_3df.cpp  unit_test.f90
wrappers/Python/: .gitignore  CLANG.make  CMakeLists.txt  INTEL.make  MANIFEST.in  Makefile  README.md  TODO  mpi_version.sh  setup.py
wrappers/Python/mui4py/: __init__.py  algorithms.py  chrono_sampler.cpp  common.py  config.py  config_name.h  geometry.cpp  geometry.py  mui4py.cpp  mui4py.py  mui_types.py  sampler.cpp  samplers.py  temporal_samplers.py  types.py
wrappers/Python/mui4py/cpp/: algorithm.cpp  algorithm_name.h  chrono_sampler.cpp  compiler_info.h  config_name.h  geometry.cpp  mui4py.cpp  sampler.cpp  sampler_name.h  temporal_name.h  temporal_sampler.cpp  uniface.cpp  uniface1d.cpp  uniface1f.cpp  uniface2d.cpp  uniface2f.cpp  uniface3d.cpp  uniface3f.cpp  uniface_base.h
(+690 files in other folders)
